feat: add singer update route
