# src/routes/singer-router.ts
@@ -2,11 +2,12 @@ import express from 'express'
 import { singerController } from '../controllers/index.js'
 
 const singerRouter = express.Router()
-const { addNewSinger, getAllSinger, getSinger, deleteSinger } = singerController
+const { addNewSinger, getAllSinger, getSinger, deleteSinger, updateSinger } = singerController
 
 singerRouter.post('/singer/new', addNewSinger)
 singerRouter.get('/singers', getAllSinger)
 singerRouter.get('/singers/:id', getSinger)
 singerRouter.delete('/singers/delete/:id', deleteSinger);
+singerRouter.put('/singers/edit/:id', updateSinger);
 
 export default singerRouter 
